# comfyUI-customDia

./: README.md  comfyui_custom_dia.json  nodes.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dia/: model.py
example_workflows/: dia_regular_TTS.json  dia_voice_cloning.json  retiming.json
